testing/tests/ui/extends.stderr
error: whitespace control is not allowed on `extends`
 --> <source attribute>:1:3
  |
       1 | {%- extends "whatever.html" %}
         |   ^ close to this token
         |
 --> tests/ui/extends.rs:5:5
  |
5 |     source = r#"{%- extends "whatever.html" %}"#,
  |     ^^^^^^

error: whitespace control is not allowed on `extends`
 --> <source attribute>:1:3
  |
       1 | {% extends "whatever.html" -%}
         |   ^ close to this token
         |
  --> tests/ui/extends.rs:12:5
   |
12 |     source = r#"{% extends "whatever.html" -%}"#,
   |     ^^^^^^
